# personal-crm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: enrichment-scope-options.html  operational-loads.md  plan2-enrichment-flow.html
scripts/: bench_bulk.py  check_cloud_rpcs.sql  redeploy_missing_rpcs.sql
src/crm/: bulk.py  cli.py  closeness.py  clustering.py  config.py  dedup_plan.py  enrich.py  matching.py  normalize.py  output.py  sources.py
supabase/: config.toml
supabase/migrations/: 0001_initial_schema.sql  0002_unaccent_matching.sql  0003_touchpoint_backfill.sql  0004_backfill_concurrency.sql  0005_dedup_clustering.sql  0006_enrichment_substrate.sql  0006_perf_rpcs.sql  0007_enrichment_provenance_backfill.sql  (+8 more)
tests/: _spy.py  conftest.py  test_admin.py  test_backfill.py  test_backfill_parallel.py  test_bulk_cohort.py  test_bulk_log.py  test_bulk_provenance.py  test_bulk_set.py  test_bulk_tag.py  test_cli_smoke.py  test_closeness.py  test_clustering.py  test_clustering_cap.py  test_config.py  test_contacts.py  test_contacts_provenance.py  test_dedup.py  test_dedup_fold.py  test_dedup_parallel.py  test_dedup_plan.py  test_dedup_rpcs.py  test_enrich_apply.py  test_enrich_array.py  test_enrich_freshness.py  test_enrich_gate.py  test_enrich_identifiers.py  test_enrich_jobchange.py  test_enrich_review.py  test_enrich_rpc.py  test_enrich_run.py  test_enrich_undo.py  test_help_descriptions.py  test_import_apple.py  test_import_csv.py  test_import_imessage.py  test_import_linkedin.py  test_import_touchpoints.py  test_log.py  test_matching.py  (+11 more)
(+22 files in other folders)
