[project]
name = "crm"
version = "0.1.0"
description = "Personal CRM data layer CLI — Rahul's real-network base"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26",
    "supabase>=2.31",
    "phonenumbers>=8.13",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "diff-cover>=9.2",
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-cov>=6.1",
]

[project.scripts]
crm = "crm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["crm"]
branch = true
omit = ["tests/*", "scripts/*"]
